# bento

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md
bento/: README.md
bento/rust/: Cargo.toml  build.rs  x86_64-unknown-none.json
bento/rust/kernel-cflags-finder/: Makefile
bento/rust/src/: bentofs.rs  bindings.rs  bindings_helper.h  helpers.c  io.rs  lib.rs
bento/rust/src/bento_utils/: disk.rs  mod.rs
bento/rust/src/fuse/: internal.rs  mod.rs  reply.rs  request.rs
bento/rust/src/kernel/: allocator.rs  cpu.rs  errno.rs  ffi.rs  fs.rs  fuse.rs  journal.rs  kobj.rs  mem.rs  mod.rs  raw.rs  semaphore.rs  stat.rs  string.rs  sync.rs  time.rs  wait_queue.rs
bento/rust/src/libc/: mod.rs
bento/rust/src/scheduler_utils/: hrtick.rs  mod.rs  rbtree.rs  ringbuffer.rs  sched_core.rs
bento/rust/src/spin_rs/: mod.rs
bento/rust/src/std/: io.rs  mod.rs  path.rs  thread.rs  time.rs
bento/rust/src/std/ffi/: mod.rs  os_str.rs
bento/rust/src/std/net/: addr.rs  ip.rs  mod.rs  tcp.rs
bento/rust/src/std/os/unix/: fs.rs  io.rs
bento/rust/src/std/sync/: condvar.rs  mod.rs  mutex.rs  rwlock.rs
bento/rust/src/std/sys/: mod.rs
bento/rust/src/std/sys/unix/: mod.rs  net.rs
bento/rust/src/std/sys_common/: mod.rs  poison.rs
bento/rust/src/time/: mod.rs
bento_backup_utils/: .gitignore  .lin  Cargo.toml  README.md  parser.rs
bento_backup_utils/.lin/: mv
bento_backup_utils/benchmark/: benchmark.py  requirements.txt  run_benchmark.sh
bento_backup_utils/benchmark/1000-files/: bento.1.txt  cp.1.txt  rsync-checksum.1.txt  rsync.1.txt
bento_backup_utils/benchmark/100000-files/: cp.1.txt  cp.2.txt  cp.3.txt  cp.4.txt  cp.5.txt  rsync-checksum.1.txt  rsync-checksum.2.txt  rsync-checksum.3.txt  rsync.1.txt  rsync.2.txt  rsync.3.txt  rsync.4.txt  rsync.5.txt
bento_backup_utils/benchmark/20000-files/: bento.1.txt  cp.1.txt  rsync-checksum.1.txt  rsync.1.txt
bento_backup_utils/benchmark/5000-files/: bento.1.txt  cp.1.txt  rsync-checksum.1.txt  rsync.1.txt
bento_backup_utils/src/: analyzer.rs  fs.rs  main.rs  parser.rs
bento_backup_utils/tests/: fs.rs  parser.rs  parser_map.rs
bento_utils/: Cargo.toml
bento_utils/src/: disk.rs  lib.rs
hello_client/: README.md
hello_client/rust/: Makefile
hello_client/rust/kernel/: Cargo.toml  Kbuild  build.rs
hello_client/rust/kernel/src/: lib.rs  module.c
hello_client/rust/src/: hello_ll.rs
hello_client/rust/userspace/: Cargo.toml  build.rs
hello_client/rust/userspace/src/: main.rs
hello_ll/: Makefile  README.md  hello
hello_ll/rust/: Cargo.toml  Kbuild  Makefile
hello_ll/rust/.tmp_versions/: hello_ll.mod
hello_ll/rust/kernel/: Cargo.toml  Kbuild
hello_ll/rust/kernel/src/: lib.rs  module.c
hello_ll/rust/src/: hello_ll.rs  lib.rs
hello_ll/rust/userspace/: Cargo.toml
hello_ll/rust/userspace/src/: main.rs
hello_ll/rust/userspace/src/bento_utils/: mod.rs
hello_ll2/: README.md
hello_ll2/rust/kernel/: Cargo.toml  Kbuild
hello_ll2/rust/kernel/src/: lib.rs
hello_ll2/rust/src/: hello_ll.rs
hello_ll2/rust/userspace/: Cargo.toml
hello_ll2/rust/userspace/src/: main.rs
hello_ll2/rust/userspace/src/bento_utils/: disk.rs
hello_srv/: README.md
hello_srv/rust/: Cargo.toml  build.rs
hello_srv/rust/src/: hello.capnp  hello_ll.rs  main.rs
provenance_tools/ebpf/: forksample.c  fsyncsample.c  fsyncsnoop.py  trace_provenance.py
scheduler_utils/: Cargo.toml
scheduler_utils/src/: cpu.rs  hrtick.rs  lib.rs  ringbuffer.rs  sched_core.rs
scheduler_utils/src/spin_rs/: mod.rs
tracing/: README.md  trace.bt
user_xv6fs/rust/: Cargo.toml
user_xv6fs/rust/src/: main.rs  xv6fs_file.rs  xv6fs_fs.rs  xv6fs_ll.rs  xv6fs_log.rs  xv6fs_utils.rs
user_xv6fs/rust/src/bento_utils/: mod.rs
xv6fs/: README.md
xv6fs/mkfs/: jbd2structs.h  mkfs.c  xv6fs.h
xv6fs/rust/: Cargo.toml  Kbuild  Makefile  xv6fs.mod.c
xv6fs/rust/.tmp_versions/: xv6fs.mod
xv6fs/rust/kernel/: Cargo.toml  Kbuild
xv6fs/rust/kernel/src/: lib.rs  module.c  xv6fs_fs.rs  xv6fs_ll.rs
xv6fs/rust/src/: lib.rs  log.rs  xv6fs_extents.rs  xv6fs_file.rs  xv6fs_fs.rs  xv6fs_htree.rs  xv6fs_ll.rs  xv6fs_log.rs  xv6fs_utils.rs
xv6fs/rust/userspace/: Cargo.toml
xv6fs/rust/userspace/src/: main.rs  xv6fs_fs.rs  xv6fs_htree.rs
xv6fs/rust/userspace/src/bento_utils/: disk.rs
xv6fs/rust/userspace/src/fuse/: channel.rs  kernel.rs  mod.rs  request.rs  session.rs
xv6fs/rust/utils/: mkfs.c
xv6fs2/: README.md
xv6fs2/rust/: Makefile
xv6fs2/rust/kernel/: Cargo.toml  Kbuild
xv6fs2/rust/kernel/src/: lib.rs
xv6fs2/rust/src/: xv6fs_file.rs  xv6fs_fs.rs  xv6fs_ll.rs  xv6fs_log.rs  xv6fs_utils.rs
xv6fs2/rust/userspace/: Cargo.toml
xv6fs2/rust/userspace/src/: main.rs
xv6fs2/rust/userspace/src/bento_utils/: mod.rs
xv6fs2/rust/userspace/src/fuse/: reply.rs
xv6fs_client/: README.md
xv6fs_client/rust/kernel/: Cargo.toml
xv6fs_client/rust/kernel/src/: lib.rs  module.c
xv6fs_client/rust/src/: xv6fs_ll.rs
xv6fs_prov/: README.md
xv6fs_prov/provenance_tools/ebpf/: README.md  trace_provenance.py
xv6fs_prov/rust/: LICENSE
xv6fs_prov/rust/kernel/: Cargo.toml  Kbuild
xv6fs_prov/rust/kernel/src/: lib.rs
xv6fs_prov/rust/src/: xv6fs_fs.rs  xv6fs_ll.rs  xv6fs_log.rs
xv6fs_prov/rust/userspace/: build.rs
xv6fs_prov/rust/userspace/src/: main.rs
xv6fs_srv/mkfs/: Makefile  mkfs_user.c  xv6fs_user.h
xv6fs_srv/rust/: Cargo.toml  Makefile  build.rs
xv6fs_srv/rust/kernel/src/: module.c
xv6fs_srv/rust/src/: main.rs  xv6fs_fs.rs  xv6fs_ll.rs
xv6fs_srv/rust/userspace/: Cargo.toml
xv6fs_view/: Cargo.toml
xv6fs_view/src/: main.rs
