[package]
name = "bento_backup_utils"
version = "1.0.0"
authors = ["Teerapat Jenrungrot", "Pat Kosakanchit", "Nicolas Monsees"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serial_test = "0.5.0"
