[package]
name = "bento"
version = "0.1.0"
authors = ["Danyang Zhuo <danyangz@cs.washington.edu>",
           "Kaiyuan Zhang <kaiyuanz@cs.washington.edu>",
           "Samantha Miller <sm237@cs.washington.edu>"]

[features]
default = []
capnproto = [ "capnp" ]
record = []

[build-dependencies]
bindgen = "*"
cc = "1.0"
shlex = "0.1"

[dependencies]
datablock = { path = "../../datablock-rs/datablock" }
hash32 = "0.1.1"
postcard = "1.0.0"

[dependencies.capnp]
version = "0.13.3"
optional = true
default-features = false

[dependencies.serde]
version = "*"
default-features = false
features = ["alloc", "derive"]
