[package]
name = "xv6fs_srv"
version = "0.1.0"
build = "build.rs"
authors = ["Danyang Zhuo <danyangz@cs.washington.edu>",
           "Kaiyuan Zhang <kaiyuanz@cs.washington.edu>",
           "Samantha Miller <sm237@cs.washington.edu>"]

[build-dependencies]
capnpc = "*"

[features]
user = []

[dependencies]
datablock = { path = "../../datablock-rs/datablock" }
bento_utils = { path = "../../bento_utils" }
libc = "0.2.5"
arr_macro = "0.1.0"
fuse = "0.3.1"
env_logger = "0.7.1"
time = "0.1"
log = "0.3"
capnp = "*"
capnpc = "*"
timer= "0.2.0"
chrono= "0.4.19"