[package]
name = "hello_ll2"
version = "0.1.0"
authors = ["Danyang Zhuo <danyangz@cs.washington.edu>",
           "Kaiyuan Zhang <kaiyuanz@cs.washington.edu>",
           "Samantha Miller <sm237@cs.washington.edu>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
bento = {path = "../../../bento/rust" }
rlibc = "1.0"
arr_macro = "0.1.0"

[dependencies.serde]
version = "*"
default-features = false
features = ["alloc", "derive"]
