[package]
name = "xv6fs"
version = "0.1.0"
build = "build.rs"
authors = ["Danyang Zhuo <danyangz@cs.washington.edu>",
           "Kaiyuan Zhang <kaiyuanz@cs.washington.edu>",
           "Samantha Miller <sm237@cs.washington.edu>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
capnpc = "0.13.0-alpha"

[dependencies]
arr_macro = "0.1.0"
rlibc = "1.0"

[dependencies.bento]
path = "../../../bento/rust"
default-features = false
features = ["capnproto"]

[dependencies.capnp]
version = "0.13.0-alpha"
default-features = false
features = []

